# deepvision

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml
skills/deepvision/: SKILL.md
src/deepvision/: __init__.py  cli.py  config.py  mcp_server.py  refine.py  schema.py  verify.py  vision.py
src/deepvision/prompts/: describe.md  structured.md  verify.md
tests/: test_schema.py
